--- a/arxiv/2023_08_arxiv.html
+++ b/arxiv/2023_08_arxiv.html
@@ -91,6 +91,66 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.01903">https://arxiv.org/abs/2308.01903</a></span> Solving Conformal Defects in 3D Conformal Field Theory using Fuzzy Sphere Regularization *** (Liangdong Hu, Yin-Chen He, W. Zhu)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.01516">https://arxiv.org/abs/2308.01516</a></span> Successful growth and room temperature ambient-pressure magnetic levitation of LK-99(Hmmm…)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.01723">https://arxiv.org/abs/2308.01723</a></span> Some remarks on possible superconductivity of composition Pb9CuP6O25(Hmmm…)</p>
+<br>
+<p class="p1">20230807</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.02189">https://arxiv.org/abs/2308.02189</a></span> Spin pumping effect in non-Fermi liquid metals ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.02387">https://arxiv.org/abs/2308.02387</a></span> Isolated Majorana mode in a quantum computer from a duality twist *** (Aditi Mitra)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.01997">https://arxiv.org/abs/2308.01997</a></span> The correlated insulators of magic angle twisted bilayer graphene at zero and one quantum of magnetic flux: a tight-binding study **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.02256">https://arxiv.org/abs/2308.02256</a></span> Disorder-Induced Phase Transitions in Three-Dimensional Chiral Second-Order Topological Insulator</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.02069">https://arxiv.org/abs/2308.02069</a></span> Classical derivation of Bose-Einstein statistics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.01961">https://arxiv.org/abs/2308.01961</a></span> Semi-classical theory of bipolaronic superconductivity in a bond-modulated electron-phonon model **** (Kyung-Su Kim, Zhaoyu Han, John Sous)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.01996">https://arxiv.org/abs/2308.01996</a></span> Unconventional Metallic Ferromagnetism: Non-Analyticity and Sign-Changing Behavior of Orbital Magnetization in Rhombohedral Trilayer Graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.02402">https://arxiv.org/abs/2308.02402</a></span> Effect of thermal fluctuations on the nontrivial topology of the d + id superconducting phase</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.01943">https://arxiv.org/abs/2308.01943</a></span> Beyond Kitaev physics in strong spin-orbit coupled magnets ***** (Natalia B. Perkins, Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.01956">https://arxiv.org/abs/2308.01956</a></span> Large N theory of critical Fermi surfaces III: Cyclotron Resonance and Quantum Oscillation ***** (Haoyu Guo, Subir Sachdev, Aavishkar A. Patel)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.02469">https://arxiv.org/abs/2308.02469</a></span> S-wave pairing in a two-orbital t-J model on triangular lattice: possible application to Pb10−x Cux (PO4 )6 O ***** (Hanbit Oh, Ya-Hui Zhang)</p>
+<p class="p2"><br></p>
+<p class="p1">20230808</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.03569">https://arxiv.org/abs/2308.03569</a></span> Systematic compactification of the (multi) two-channel Kondo model. I. Consistent bosonization-debosonization approach and exact comparisons *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.03590">https://arxiv.org/abs/2308.03590</a></span> Systematic compactification of the (multi) two-channel Kondo model. II. Comparative study of scaling and universality *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.03606">https://arxiv.org/abs/2308.03606</a></span> Systematic compactification of the (multi) two-channel Kondo model. III. Extended field-theoretic renormalization group analysis *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.03074">https://arxiv.org/abs/2308.03074</a></span> Non-Fermi Liquid Behavior of the t-J Model in the Strange Metal Phase: U(1) Gauge Theory with Local Constraints ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.03143">https://arxiv.org/abs/2308.03143</a></span> Magic Angles and Fractional Chern Insulators in Twisted Homobilayer TMDs (Allan H. MacDonald)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.03346">https://arxiv.org/abs/2308.03346</a></span> Supersymmetry Breaking in a Generalized Nicolai Model with Fermion Pairing ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.10195">https://arxiv.org/abs/2207.10195</a></span> Anomalies in fluid dynamics: flows in a chiral background via variational principle **** (A.G. Abanov, P.B. Wiegmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.03751">https://arxiv.org/abs/2308.03751</a></span> Tight-binding models for SG 143 (P3) and application to recent DFT results on copper-doped lead apatite</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.03110">https://arxiv.org/abs/2308.03110</a></span> Ferromagnetic half levitation of LK-99-like synthetic samples ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.03544">https://arxiv.org/abs/2308.03544</a></span> Absence of superconductivity in LK-99 at ambient conditions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.03691">https://arxiv.org/abs/2308.03691</a></span> Possible ferroic properties of copper-substituted lead phosphate apatite</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.01315">https://arxiv.org/abs/2308.01315</a></span> Minimal model for the flat bands in copper-substituted lead phosphate apatite (Omid Tavakol, Thomas Scaffidi)</p>
+<p class="p2"><br></p>
+<p class="p1">20230809</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.03836">https://arxiv.org/abs/2308.03836</a></span> Edge states of 2D time-reversal-invariant topological superconductors with strong interactions and disorder: A view from the lattice **** (Jun Ho Son, Jason Alicea, Olexei I. Motrunich)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.03844">https://arxiv.org/abs/2308.03844</a></span> Measurement induced criticality in quasiperiodic modulated random hybrid circuits *** (J. H. Pixley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.03835">https://arxiv.org/abs/2308.03835</a></span> Emergence of nodal Bogoliubov quasiparticles across the transition from the pseudogap metal to the d-wave superconductor ***** (Maine Christos, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.12829">https://arxiv.org/abs/2303.12829</a></span> Classification and emergence of quantum spin liquids in chiral Rydberg models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.04344">https://arxiv.org/abs/2308.04344</a></span> Structural, electronic, magnetic properties of Cu-doped lead-apatite Pb10−xCux(PO4)6O</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.04427">https://arxiv.org/abs/2308.04427</a></span> Pb10−xCux(PO4)6O: a Mott or charge transfer insulator in need of further doping for (super)conductivity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.04353">https://arxiv.org/abs/2308.04353</a></span> First order transition in Pb10-xCux(PO4)6O (0.9&lt;x&lt;1.1) containing Cu2S</p>
+<p class="p2"><br></p>
+<p class="p1">20230810</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.04484">https://arxiv.org/abs/2308.04484</a></span> Landau Theory of Altermagnetism (Paul A. McClarty, Jeffrey G. Rau)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.04495">https://arxiv.org/abs/2308.04495</a></span> Phase transitions and bunching of correlated particles in a non-Hermitian quasi crystal (Stefano Longhi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.04862">https://arxiv.org/abs/2308.04862</a></span> Review cuprates – Anderson’s unhappy electrons and their fate</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.04489">https://arxiv.org/abs/2308.04489</a></span> Gapped Interfaces in Fracton Models and Foliated Fields (Po-Shen Hsin, Zhu-Xi Luo, Ananth Malladi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05001">https://arxiv.org/abs/2308.05001</a></span> Observation of abnormal resistance-temperature behavior along with diamagnetic transition in Pb10-xCux(PO4)6O-based composite **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.04976">https://arxiv.org/abs/2308.04976</a></span> Correlated electronic structure of Pb10−xCux(PO4)6O</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.04480">https://arxiv.org/abs/2308.04480</a></span> Effective model for Pb9Cu(PO4)6O (Patrick A. Lee, Zhehao Dai)</p>
+<p class="p2"><br></p>
+<p class="p1">20230811</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05670">https://arxiv.org/abs/2308.05670</a></span> The Fracton quantum gas</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05285">https://arxiv.org/abs/2308.05285</a></span> Fermi liquid-like behaviour of cuprates in the pseudogap phase simulated via T-dependent electron-boson spectral density</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05290">https://arxiv.org/abs/2308.05290</a></span> Planckian behavior of cuprates at the pseudogap critical point simulated via flat electron-boson spectral density</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05325">https://arxiv.org/abs/2308.05325</a></span> Bosonic spectrum of a correlated multiband system, BaFe1.80Co0.20As2, obtained via infrared spectroscopy</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05151">https://arxiv.org/abs/2308.05151</a></span> Lieb-Schultz-Mattis anomalies as obstructions to gauging (non-on-site) symmetries ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05155">https://arxiv.org/abs/2308.05155</a></span> Universal conductivity at a 2d superconductor-insulator transition: the effects of quenched disorder and Coulomb interaction *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05730">https://arxiv.org/abs/2308.05730</a></span> Emergent generalized symmetries in ordered phases ***** (Salvatore D. Pace)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.17121">https://arxiv.org/abs/2306.17121</a></span> 2D Fractons from Gauging Exponential Symmetries **** (Guilherme Delfino, Claudio Chamon, Yizhi You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.03474">https://arxiv.org/abs/2303.03474</a></span> Large p SYK from chord diagrams ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.14336">https://arxiv.org/abs/2211.14336</a></span> Localization control born of intertwined quasiperiodicity and non-Hermiticity (Junmo Jeon, SungBin Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.02086">https://arxiv.org/abs/2211.02086</a></span> INVERTIBLE SUBALGEBRAS ***** (JEONGWAN HAAH)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05222">https://arxiv.org/abs/2308.05222</a></span> Phase transition of copper (I) sulfide and its implication for purported superconductivity of LK-99 ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05143">https://arxiv.org/abs/2308.05143</a></span> Pb9Cu(PO4)6(OH)2: Phonon bands, Localized Flat Band Magnetism, Models, and Chemical Analysis ***** (B. Andrei Bernevig)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
