--- a/arxiv/2023_08_arxiv.html
+++ b/arxiv/2023_08_arxiv.html
@@ -151,6 +151,48 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.02086">https://arxiv.org/abs/2211.02086</a></span> INVERTIBLE SUBALGEBRAS ***** (JEONGWAN HAAH)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05222">https://arxiv.org/abs/2308.05222</a></span> Phase transition of copper (I) sulfide and its implication for purported superconductivity of LK-99 ****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05143">https://arxiv.org/abs/2308.05143</a></span> Pb9Cu(PO4)6(OH)2: Phonon bands, Localized Flat Band Magnetism, Models, and Chemical Analysis ***** (B. Andrei Bernevig)</p>
+<br>
+<p class="p1">20230814</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05793">https://arxiv.org/abs/2308.05793</a></span> Delicate Topology of Luttinger Semimetal</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.06073">https://arxiv.org/abs/2308.06073</a></span> Emergent inductance from spin fluctuations in strongly correlated magnets **** (Taekoo Oh, Naoto Nagaosa)<br>
+<a href="https://arxiv.org/abs/2308.04951"><span class="s1">https://arxiv.org/abs/2308.04951</span></a> Thermodynamic perspective on quantum fluctuations</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05778">https://arxiv.org/abs/2308.05778</a></span> Current percolation model for the special resistivity behavior observed in Cu-doped Apatite</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.06222">https://arxiv.org/abs/2308.06222</a></span> High-temperature superconductivity induced by the Su-Schrieffer-Heeger electron-phonon coupling **** (Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05791">https://arxiv.org/abs/2308.05791</a></span> Transport anomalies in multiband superconductors near quantum critical point</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.01956">https://arxiv.org/abs/2308.01956</a></span> Large N theory of critical Fermi surfaces III: Cyclotron Resonance and Quantum Oscillation ***** (Haoyu Guo, Subir Sachdev, Aavishkar A. Patel)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.14073">https://arxiv.org/abs/2302.14073</a></span> Phonon Thermal Hall Effect in a non-Kramers Paramagnet **** (Haoyu Guo)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.06256">https://arxiv.org/abs/2308.06256</a></span> Single crystal synthesis, structure, and magnetism of Pb10−<i>x</i>Cu<i>x</i>(PO4)6O ***** (B. Keimer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.07661">https://arxiv.org/abs/2207.07661</a></span> Quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction ****** (Daniel J. Schultz, SangEun Han, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.14955">https://arxiv.org/abs/2306.14955</a></span> Bosonization of Non-Fermi Liquids ****** (SangEun Han, F ́elix Desrochers, Yong Baek Kim)</p>
+<br>
+<p class="p1">20230815</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.06916">https://arxiv.org/abs/2308.06916</a></span> Gauge field fluctuation corrected QED3 effective action by fermionic particle-vortex duality</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.06638">https://arxiv.org/abs/2308.06638</a></span> Angle-Resolved Pair Photoemission Theory for Correlated Electrons *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.12295">https://arxiv.org/abs/2307.12295</a></span> Spin-Peierls instability of the U(1) Dirac spin liquid (Frank Pollmann, Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.00058">https://arxiv.org/abs/2306.00058</a></span> Universality of the cross entropy in Z2 symmetric monitored quantum circuits Maria Tikhanovskaya,1, 2 Ali Lavasani,2 Matthew P. A. Fisher,3 and Sagar Vijay</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.00580">https://arxiv.org/abs/2304.00580</a></span> Nobel Lecture: Multiple equilibria **** (Giorgio Parisi)</p>
+<br>
+<p class="p1">20230816</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.07408">https://arxiv.org/abs/2308.07408</a></span> Cu-substituted lead phosphate apatite as an inversion-asymmetric Weyl semimetal *** (Marcel Franz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.07753">https://arxiv.org/abs/2308.07753</a></span> Shaping electronic flows with strongly correlated physics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.07372">https://arxiv.org/abs/2308.07372</a></span> Classical Non-Relativistic Fractons (S.L. Sondhi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.07380">https://arxiv.org/abs/2308.07380</a></span> Disorder Operator and R ́enyi Entanglement Entropy of Symmetric Mass Generation ***** (Chao-Ming Jian, Yi-Zhuang You, Fakher F. Assaad, Zi Yang Meng, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05670">https://arxiv.org/abs/2308.05670</a></span> The Fracton quantum gas</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.07800">https://arxiv.org/abs/2308.07800</a></span> Phases and magnetism at microscale in compounds containing nominal Pb10-<i>x</i>Cu<i>x</i>(PO4)6O **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.07376">https://arxiv.org/abs/2308.07376</a></span> Transport signatures of Bogoliubov Fermi surfaces in normal metal/time-reversal symmetry broken d-wave superconductor junctions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05256">https://arxiv.org/abs/2301.05256</a></span> An effective field theory for non-maximal quantum chaos ***** (Hong Liu)</p>
+<p class="p2"><br></p>
+<p class="p1">20230817</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.08405">https://arxiv.org/abs/2308.08405</a></span> Vortex detection in atomic Bose–Einstein condensates using neural networks trained on synthetic images (Yong-il. Shin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.08248">https://arxiv.org/abs/2308.08248</a></span> Quantum geometry in superfluidity and superconductivity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.08340">https://arxiv.org/abs/2308.08340</a></span> Detecting a long lived false vacuum with quantum quenches (Frank Wilczek)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.07964">https://arxiv.org/abs/2308.07964</a></span> Quantum computing for chemistry and physics applications from a Monte Carlo perspective</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.08264">https://arxiv.org/abs/2308.08264</a></span> Lindblad master equation approach to the dissipative quench dynamics of planar superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.08265">https://arxiv.org/abs/2308.08265</a></span> Dissipation driven dynamical topological phase transitions in two-dimensional superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.07941">https://arxiv.org/abs/2308.07941</a></span> Phase Stability of Lead Phosphate Apatite Pb10−xCux(PO4)6O, Pb10−xCux(PO4)6(OH)2, and Pb8Cu2(PO4)6</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.08843">https://arxiv.org/abs/2207.08843</a></span> Dimensional Transmutation from Non-Hermiticity (Ching Hua Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2205.12211">https://arxiv.org/abs/2205.12211</a></span> Benchmarking quantum simulators using ergodic quantum dynamics **** (Daniel K. Mark, Joonhee Choi, Adam L. Shaw, Manuel Endres, Soonwon Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.10916">https://arxiv.org/abs/2108.10916</a></span> Probabilistic deconstruction of a theory of gravity, Part I: flat space (S. Josephine Suh)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
