--- a/index.html
+++ b/index.html
@@ -289,20 +289,26 @@ and insulator phases with the tuning parameter m." width=30%> We study the quant
 	<div>
 	<div class="cvitemize"> Academic Affiliations </div>
 		<ul><div>
+		<li><span class="cvitem"> Department of Physics, Simon Fraser University</span>, Burnaby, Canada
+		<span class="cvperiod">September 2023 - Present</span>
+		</div>
+		<div class="cvitemcontent"> Postdoctoral Fellow </div>	
+		</li></ul>
+		<ul><div>
 		<li><span class="cvitem"> Department of Physics, University of Toronto</span>, Toronto, Canada
-		<span class="cvperiod">November 2020 ~ Present</span>
+		<span class="cvperiod">November 2020 - August 2023</span>
 		</div>
 		<div class="cvitemcontent"> Postdoctoral Fellow </div>	
 		</li></ul>
 		<ul><div>
 		<li><span class="cvitem"> School of Computational Sciences, KIAS</span>, Seoul, Korea
-		<span class="cvperiod">August 2020 ~ October 2020</span>
+		<span class="cvperiod">August 2020 - October 2020</span>
 		</div>
 		<div class="cvitemcontent"> Visiting Scholar </div>	
 		</li></ul>
 		<ul><div>
 		<li><span class="cvitem"> Department of Physics, KAIST</span>, Daejeon, Korea
-		<span class="cvperiod">March 2013 ~ August 2020</span>
+		<span class="cvperiod">March 2013 - August 2020</span>
 		</div>
 		<div class="cvitemcontent"> Candidate of Integrated Master's and Ph.D Program </div>	
 		</li></ul>
@@ -313,7 +319,7 @@ and insulator phases with the tuning parameter m." width=30%> We study the quant
 		<ul>
 		<li><div>
 		<span class="cvitem"> Korea Advanced Institute of Science and Technology</span>, Daejeon, Korea
-		<span class="cvperiod">March 2013 ~ August 2020</span>
+		<span class="cvperiod">March 2013 - August 2020</span>
 		</div>
 		<div class="cvitemcontent"> Doctor of Philosophy in Physics</div>
 		<div class="cvitemcontent"> Thesis Adviosr: <a href="https://sites.google.com/view/egmoon" style="text-decoration:none;color:var(--font-color)">Prof. Eun-Gook Moon</a></div>
@@ -322,7 +328,7 @@ and insulator phases with the tuning parameter m." width=30%> We study the quant
 		</li><li>
 		<div>
 		<span class="cvitem"> Korea Advanced Institute of Science and Technology</span>, Daejeon, Korea
-		<span class="cvperiod"> Feburary 2010 ~ Feburary 2013</span>
+		<span class="cvperiod"> Feburary 2010 - Feburary 2013</span>
 		</div>
 		<div class="cvitemcontent"> Bachelor of Science, Magna Cum Laude, Feburary, 2013</div>
 		<div class="cvitemcontent"> Double major in Physics and Mathematical Sciences</div>
@@ -331,7 +337,7 @@ and insulator phases with the tuning parameter m." width=30%> We study the quant
 		</li><li>
 		<div>
 		<span class="cvitem"> Hankuk University of Foreign Studies</span>, Seoul, Korea
-		<span class="cvperiod"> March 2006 ~ January 2008</span>
+		<span class="cvperiod"> March 2006 - January 2008</span>
 		</div>
 		<div class="cvitemcontent"> in Department of Physics</div>
 		<!--<div class="cvitemcontent"> Cumulative GPA : 4.18/4.5</div>-->
@@ -342,12 +348,12 @@ and insulator phases with the tuning parameter m." width=30%> We study the quant
 	<div class="cvitemize"> Scholarships </div>
 		<ul><li><div>
 		<span class="cvitem"> Scholarship</span> of Center for Theoretical Physics of the Universe, IBS
-		<span class="cvperiod">March 2014 ~ June 2015</span>		
+		<span class="cvperiod">March 2014 - June 2015</span>		
 		</div>
 		</li><li>
 		<div>
 		<span class="cvitem"> Academic Scholarship</span> in Hankuk University of Foreign Studies
-		<span class="cvperiod">2006 Fall ~ 2008 Spring</span>		
+		<span class="cvperiod">2006 Fall - 2008 Spring</span>		
 		</div>
 		</li></ul>
 	</div>
@@ -381,27 +387,27 @@ and insulator phases with the tuning parameter m." width=30%> We study the quant
 	<div class="cvitemize"> Services </div>
 		<ul><li><div>
 		<span class="cvitem"> Reviewer </span>
-		<span class="cvperiod">August 2022 ~ Present</span>
+		<span class="cvperiod">August 2022 - Present</span>
 		</div>
 		<div class="cvitemcontent"> of <em>Nature Communications</em></div>
 		</li><li><div>
 		<span class="cvitem"> Referee </span>
-		<span class="cvperiod">January 2020 ~ Present</span>
+		<span class="cvperiod">January 2020 - Present</span>
 		</div>
 		<div class="cvitemcontent"> of <em>Phys. Rev. Research</em></div>
 		</li><li><div>
 		<span class="cvitem"> Referee </span>
-		<span class="cvperiod">April 2019 ~ Present</span>
+		<span class="cvperiod">April 2019 - Present</span>
 		</div>
 		<div class="cvitemcontent"> of <em>Phys. Rev. Lett.</em></div>
 		</li><li><div>
 		<span class="cvitem"> Referee </span>
-		<span class="cvperiod">September 2018 ~ Present</span>
+		<span class="cvperiod">September 2018 - Present</span>
 		</div>
 		<div class="cvitemcontent"> of <em>Phys. Rev.</em> B</div>
 		</li><li><div>
 		<span class="cvitem"> Military service </span>
-		<span class="cvperiod">Feburary 2008 ~ January 2010</span>
+		<span class="cvperiod">Feburary 2008 - January 2010</span>
 		</div>
 		<div class="cvitemcontent"> at Republic of Korea Army, the 30th Division, Republic of Korea</div>
 		</li></ul>		
@@ -418,55 +424,55 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
 	<div class="cvitemize"> Teaching Experiences </div>
 		<ul><li><div>
 		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
-		<span class="cvperiod"> September 2017 ~ December 2017 </span>
+		<span class="cvperiod"> September 2017 - December 2017 </span>
 		</div>
 		<div class="cvitemcontent"> Course: Graduate Quantum Mechanics 2 </div>
 		
 		</li><li><div>
 		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
-		<span class="cvperiod"> March 2017 ~ June 2017 </span>
+		<span class="cvperiod"> March 2017 - June 2017 </span>
 		</div>
 		<div class="cvitemcontent"> Course: Graduate Quantum Mechanics 1 </div>
 		
 		</li><li><div>
 		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
-		<span class="cvperiod"> September 2016 ~ December 2016 </span>
+		<span class="cvperiod"> September 2016 - December 2016 </span>
 		</div>
 		<div class="cvitemcontent"> Course: Colloquium & Seminar </div>
 		
 		</li><li><div>
 		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
-		<span class="cvperiod"> March 2016 ~ June 2016 </span>
+		<span class="cvperiod"> March 2016 - June 2016 </span>
 		</div>
 		<div class="cvitemcontent"> Course: Graduate Quantum Mechanics 1 </div>
 		
 		</li><li><div>
 		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
-		<span class="cvperiod"> September 2015 ~ December 2015 </span>
+		<span class="cvperiod"> September 2015 - December 2015 </span>
 		</div>
 		<div class="cvitemcontent"> Course: Undergraduate Quantum Mechanics 2 </div>
 		
 		</li><li><div>
 		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
-		<span class="cvperiod"> March 2015 ~ June 2015 </span>
+		<span class="cvperiod"> March 2015 - June 2015 </span>
 		</div>
 		<div class="cvitemcontent"> Course: Undergraduate Quantum Mechanics 1 </div>
 		
 		</li><li><div>
 		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
-		<span class="cvperiod"> March 2014 ~ June 2014 </span>
+		<span class="cvperiod"> March 2014 - June 2014 </span>
 		</div>
 		<div class="cvitemcontent"> Course: Quantum Field Theory 2 </div>
 		
 		</li><li><div>
 		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
-		<span class="cvperiod"> September 2013 ~ December 2013 </span>
+		<span class="cvperiod"> September 2013 - December 2013 </span>
 		</div>
 		<div class="cvitemcontent"> Course: General Physics 2 </div>	
 
 		</li><li><div>
 		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
-		<span class="cvperiod">March 2013 ~ June 2013 </span>
+		<span class="cvperiod">March 2013 - June 2013 </span>
 		</div>
 		<div class="cvitemcontent"> Course: General Physics 1 </div>	
 
