--- a/titlecontent.html
+++ b/titlecontent.html
@@ -39,7 +39,7 @@
 <body style="background-color: var(--bg-color)">
 
 <div id="titlecontent" style="font-size:90%">
-<span class="cvitemcontent">e-mail: se.han at utoronto.ca & sehan.physics at gmail.com<br>
+<span class="cvitemcontent">e-mail: sehan.physics at gmail.com <br>& se.han at utoronto.ca (will fade out on August 31st, 2023)<br>
 <a href="https://www.physics.utoronto.ca">Department of Physics</a><br>
 <a href="https://www.utoronto.ca">University of Toronto (U of T)</a></span></div>
 </body>
