--- a/arxiv/2023_08_arxiv.html
+++ b/arxiv/2023_08_arxiv.html
@@ -193,6 +193,55 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.08843">https://arxiv.org/abs/2207.08843</a></span> Dimensional Transmutation from Non-Hermiticity (Ching Hua Lee)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2205.12211">https://arxiv.org/abs/2205.12211</a></span> Benchmarking quantum simulators using ergodic quantum dynamics **** (Daniel K. Mark, Joonhee Choi, Adam L. Shaw, Manuel Endres, Soonwon Choi)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.10916">https://arxiv.org/abs/2108.10916</a></span> Probabilistic deconstruction of a theory of gravity, Part I: flat space (S. Josephine Suh)</p>
+<br>
+<p class="p1">20230821</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.09636">https://arxiv.org/abs/2308.09636</a></span> Critical enhancement of the spin Hall effect by spin fluctuations (Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.09163">https://arxiv.org/abs/2308.09163</a></span> U(1) Defects on Domain Lines (Mikhail Shifman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.09377">https://arxiv.org/abs/2308.09377</a></span> Stacked tree construction for free-fermion projected entangled pair states (Hoi Chun Po)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.09702">https://arxiv.org/abs/2308.09702</a></span> Non-Abelian quantum Hall states in multi-layer rhombohedral stacked graphene (Xiao-Gang Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.07574">https://arxiv.org/abs/2308.07574</a></span> On the dynamical kernels of fermionic equations of motion in strongly-correlated media</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.08592">https://arxiv.org/abs/2308.08592</a></span> Confinement in 1+1D Z2 Lattice Gauge Theories at Finite Temperature **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.09670">https://arxiv.org/abs/2308.09670</a></span> Classification of modular data up to rank 11 (Xiao-Gang Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.08609">https://arxiv.org/abs/2308.08609</a></span> Pair density wave superconductivity: a microscopic model in two dimensions *** (Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.08695">https://arxiv.org/abs/2308.08695</a></span> Effective Action for Dissipative and Nonholonomic Systems ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.11262">https://arxiv.org/abs/2302.11262</a></span> Robust Fermi liquid instabilities in sign problem-free models *** (Erez Berg)</p>
+<p class="p2"><br></p>
+<p class="p1">20230822</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.09925">https://arxiv.org/abs/2308.09925</a></span> Fermi Surface Spin Texture and Topological Superconductivity in Spin-Orbit Free Non-Collinear Antiferromagnets **** (Seung Hun Lee, Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.10190">https://arxiv.org/abs/2308.10190</a></span> Two-fluid theory of composite bosons and fermions and the quantum Hall proximity effect **** (Zhaoyu Han, Kyung-Su Kim, Steven A. Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.10903">https://arxiv.org/abs/2308.10903</a></span> Phase transitions out of quantum Hall states in moiré TMD bilayers ***** (Xue-Yang Song, Ya-Hui Zhang, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.10406">https://arxiv.org/abs/2308.10406</a></span> Toward a global phase diagram of the fractional quantum anomalous Hall effect (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.10530">https://arxiv.org/abs/2308.10530</a></span> Displacement-field-tunable superconductivity in an inversion-symmetric twisted van der Waals heterostructure (Mathias S. Scheurer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.09758">https://arxiv.org/abs/2308.09758</a></span> <b>Entanglement structure in quantum many-body systems, field theories, and holography *****</b></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.10863">https://arxiv.org/abs/2308.10863</a></span> Lorentz-Invariant Interactions in Honeycomb Lattice with Hubbard Interaction</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.03074">https://arxiv.org/abs/2308.03074</a></span> Non-Fermi Liquid Behavior of the t-J Model in the Strange Metal Phase: U(1) Gauge Theory with Local Constraints ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.09444">https://arxiv.org/abs/2305.09444</a></span> Absence of inhomogeneous chiral phases in (2 + 1)-dimensional four-fermion and Yukawa models ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.01001">https://arxiv.org/abs/2305.01001</a></span> Quantum statistical mechanics of the Sachdev-Ye-Kitaev model and strange metals ***** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05730">https://arxiv.org/abs/2308.05730</a></span> Emergent generalized symmetries in ordered phases *** (Salvatore D. Pace)</p>
+<p class="p2"><br></p>
+<p class="p1">20230823</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.11195">https://arxiv.org/abs/2308.11195</a></span> Superconductivity from Doping Symmetric Mass Generation Insulators: Application to La3Ni2O7 under Pressure **** (Da-Chuan Lu, Miao Li, Zhao-Yi Zeng, Wanda Hou, Juven Wang, Fan Yang, Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.10935">https://arxiv.org/abs/2308.10935</a></span> Superconductivity in a Topological Lattice Model with Strong Repulsion *** (Ashvin Vishwanath, Shubhayu Chatterjee, Norman Y. Yao, Michael P. Zaletel)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.11075">https://arxiv.org/abs/2308.11075</a></span> A Deep Dive into the Connections Between the Renormalization Group and Deep Learning in the Ising Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.11482">https://arxiv.org/abs/2308.11482</a></span> On Polymer Statistical Mechanics: From Gaussian Distribution to Maxwell-Boltzmann Distribution to Fermi-Dirac Distribution</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.11057">https://arxiv.org/abs/2308.11057</a></span> Nonanalytic Corrections to the Landau Diamagnetic Susceptibility ***** (Andrey V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.11318">https://arxiv.org/abs/2308.11318</a></span> How to identify and characterize strongly correlated topological semimetals ***** (Silke Paschen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.11414">https://arxiv.org/abs/2308.11414</a></span> Pair density wave, unconventional superconductivity, and non-Fermi liquid quantum critical phase in frustrated Kondo lattice</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.11614">https://arxiv.org/abs/2308.11614</a></span> Pressure driven screening of Ni spin results in cuprate-like high-<i>Tc </i>superconductivity in La3Ni2O7 (Wei Ku)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.01855">https://arxiv.org/abs/2307.01855</a></span> Dynamic paramagnon-polarons in altermagnets (Rafael M. Fernandes, J ̈org Schmalian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.10929">https://arxiv.org/abs/2308.10929</a></span> Heisenberg-limited metrology with perturbing interactions ** (Andrew Lucas)</p>
+<p class="p2"><br></p>
+<p class="p1">20230824</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.11706">https://arxiv.org/abs/2308.11706</a></span> Anomalies of Non-Invertible Symmetries in (3+1)d (Clay Co ́rdova, Po-Shen Hsin, Carolyn Zhang)<br>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.11707">https://arxiv.org/abs/2308.11707</a></span> Anomalies of non-invertible self-duality symmetries: fractionalization and gauging</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.09197">https://arxiv.org/abs/2305.09197</a></span> Mixed-State Quantum Spin Liquids and Dynamical Anyon Condensations in Kitaev Lindbladians (Kyusung Hwang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.02663">https://arxiv.org/abs/2211.02663</a></span> Quantum noise spectroscopy of dynamical critical phenomena (Eugene A. Demler, Norman Y. Yao, Shubhayu Chatterjee)</p>
+<p class="p2"><br></p>
+<p class="p1">20230825</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.12838">https://arxiv.org/abs/2308.12838</a></span> Tunable quantum criticality in multi-component Rydberg arrays</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.12426">https://arxiv.org/abs/2308.12426</a></span> Absence of SO(4) quantum criticality in Dirac semimetals at two-loop order ***** (Max Uetrecht, Igor F. Herbut, Emmanuel Stamou, Michael M. Scherer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.02723">https://arxiv.org/abs/2209.02723</a></span> Average Symmetry-Protected Topological Phases **** (Ruochen Ma, Chong Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.09831">https://arxiv.org/abs/2208.09831</a></span> An electronic band sculpted by oxygen vacancies and indispensable for dilute superconductivity **** (Hyeok Yoon, Harold Y. Hwang)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
